<resources>
    <string name="app_name">Just Find It!</string>
    <string name="logo">AndroidApp Logo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_menu">Settings</string>
    <string name="preference_file_key">JustFindIt_SP_file</string>
    <string name="server_address">http://185.237.157.193/TM/</string>

    <string name="note_loadingScreen">Loading data. Please wait…</string>
    <string name="note_successfulLogin">Successful login</string>
    <string name="note_successfulRegistered">Successful registered</string>
    <string name="note_successfulEditProfile">Profile updated successfully</string>

    <string name="menu_group_general">General</string>
    <string name="menu_group_profile">Profile</string>

    <string name="menu_home">Home</string>
    <string name="menu_locations">Location</string>
    <string name="menu_add_locations">Add Locations</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_search_profile">Search User</string>
    <string name="menu_logout_profile">Logout</string>
    <string name="menu_search_location">Search Location</string>
    <string name="login_page_title">Start from logging into your account</string>
    <string name="loginPage_login">Login</string>
    <string name="loginPage_password">Password</string>
    <string name="loginPage_registerNote">You dont have an account?</string>
    <string name="loginPage_register">Registration</string>
    <string name="searchLocation_hint">Location Name</string>
    <string name="registrationPage_title">Create new account</string>
    <string name="registrationPage_confPass">Confirm password</string>
    <string name="registrationPage_email">Email</string>
    <string name="registrationPage_avatar">Choose avatar</string>
    <string name="registrationPage_editAvatar">Edit avatar</string>
    <string name="registrationPage_cropAvatar">Crop</string>
    <string name="registrationPage_browse">Browse</string>
    <string name="registrationPage_register">Register</string>
    <string name="searchProfile_hint">Profile Name</string>
    <string name="addTip">Add next tip</string>
    <string name="comments">Comments</string>
    <string name="checkPosition">Check Position</string>
    <string name="addComment">Add comment</string>
    <string name="acceptComment">Publish</string>
    <string name="trophies">Trophies</string>
    <string name="change_avatar">Change avatar</string>
    <string name="save_profile_description">Save profile description</string>
    <string name="save_new_password">Save new password</string>
    <string name="location_name">Location Name</string>
    <string name="first_tip">First Tip</string>
    <string name="second_tip">Second Tip</string>
    <string name="third_tip">Third Tip</string>
    <string name="fourth_tip">Fourth Tip</string>
    <string name="fifth_tip">Fifth Tip</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="save_location">Save location</string>
    <string name="tip_text">Tip Text</string>
    <string name="registerError_loginLength">Username must have from 3 to 20 characters.</string>
    <string name="registerError_loginSyntax">Use only letters and numbers.</string>
    <string name="registerError_loginOccupied">User with that name already exists.</string>
    <string name="registerError_passwordLength">Password must have from 8 to 30 characters.</string>
    <string name="registerError_passwordsNotMatch">Passwords are not the same.</string>
    <string name="registerError_emailSyntax">Put correct email.</string>
    <string name="registerError_emailOccupied">Account with that email already exists.</string>
    <string name="registerError_imageNotLoad">Error during uploading profile image.</string>
    <string name="loginError_noCredential">Login or/and password not given.</string>
    <string name="loginError_wrongCredential">Login or/and password not match.</string>
    <string name="navHeader_noUser_login">User name</string>
    <string name="navHeader_noUser_email">email</string>
    <string name="upload_location">Upload location</string>
    <string name="profilePage_registeredLabelText">Registered since:</string>
    <string name="profilePage_descriptionLabelText">Description</string>
    <string name="editProfilePage_editDescriptionLabelText">Edit your profile description</string>
    <string name="editProfilePage_editLoginLabelText">Edit your profile name</string>
    <string name="editProfilePage_editAvatarLabelText">Edit your avatar</string>
    <string name="editProfilePage_editEmailLabelText">Change associated email</string>
    <string name="editProfilePage_editPasswordLabelText">Set new account password</string>
    <string name="editProfilePage_saveButtonText">Save changes</string>
    <string name="editProfilePage_currPasswordLabelText">Provide current password</string>
    <string name="editProfileError_badCurrPassword">Bad current password</string>
    <string name="editProfileNote_noChanges">No changes provided</string>
    <string name="editProfileNote_noCurrPassword">Current password is necessary</string>
    <string name="editProfileNote_changesDetected">Changes detected</string>
    <string name="addLocation_cropImageTitle">Choose image</string>
    <string name="locationFragment_note_alreadySolved">This location is already solved!</string>
    <string name="locationFragment_note_locationSolved">Nice man! You solved this location!</string>
    <string name="locationFragment_note_badPosition">Current position doesnt match location coordinates!</string>
    <string name="locationFragment_errorOnServerUpdate">Error during progress update on server.</string>
    <string name="profilePage_noTrophiesText">No trophies to show</string>
    <string name="menuOption_themeMode">Light/Dark mode</string>
    <string name="loginPage_loginLabel">Login</string>
    <string name="addLocationPage_saveWrittenValuesText">Save own values</string>
    <string name="addLocationPage_saveActualValuesText">Read GPS values</string>
    <string name="aboutAppPage_authors">Authors:</string>
    <string name="menuOptions_aboutApp">About App</string>
    <string name="aboutAppPage_appVersion">v1.0</string>
    <string name="aboutAppPage_appVersionLabel">Version:</string>
    <string name="aboutAppPage_gitHubLabel">Aplication GitHub Page</string>
    <string name="aobutAppPage_aboutAppLabel">About application</string>
    <string name="aboutAppPage_aboutApp">This Application enables to find prepared by other users locations and get trophy adequate to the amount of used tips.</string>
</resources>