<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_group_general">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_locations"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_locations" />
                <item
                    android:id="@+id/nav_search_location"
                    android:icon="?android:attr/actionModeWebSearchDrawable"
                    android:title="@string/menu_search_location" />
                <item
                    android:id="@+id/nav_add_locations"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_add_locations" />
            </group>
        </menu>
    </item>
    <item android:title="@string/menu_group_profile">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_edit_profile"
                android:title="@string/menu_edit_profile" />
            <item
                android:id="@+id/nav_search_profile"
                android:title="@string/menu_search_profile" />
            <item
                android:id="@+id/nav_logout_profile"
                android:title="@string/menu_logout_profile" />
        </menu>
    </item>
</menu>