<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:fillViewport="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileFragment">

        <ImageView
            android:id="@+id/profilePage_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:minWidth="200px"
            android:minHeight="200px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_no_avatar"
            tools:src="@drawable/ic_no_avatar"
            tools:srcCompat="@drawable/ic_no_avatar" />

        <TextView
            android:id="@+id/profilePage_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="?attr/colorButtonNormal"
            android:paddingLeft="20px"
            android:paddingTop="10px"
            android:paddingRight="20px"
            android:paddingBottom="10px"
            android:text="TextView"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePage_descriptionLabel" />

        <TextView
            android:id="@+id/trophiesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/trophies"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/profilePage_description"
            app:layout_constraintStart_toStartOf="@+id/profilePage_description"
            app:layout_constraintTop_toBottomOf="@+id/profilePage_description" />

        <TextView
            android:id="@+id/profilePage_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="TextView"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toEndOf="@+id/profilePage_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profilePage_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="@+id/profilePage_login"
            app:layout_constraintTop_toBottomOf="@+id/profilePage_login" />

        <TextView
            android:id="@+id/profilePage_registeredLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/profilePage_registeredLabelText"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="@+id/profilePage_login"
            app:layout_constraintTop_toBottomOf="@+id/profilePage_email" />

        <TextView
            android:id="@+id/profilePage_registeredDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="@+id/profilePage_registeredLabel"
            app:layout_constraintStart_toEndOf="@+id/profilePage_registeredLabel"
            app:layout_constraintTop_toTopOf="@+id/profilePage_registeredLabel" />

        <TextView
            android:id="@+id/profilePage_descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/profilePage_descriptionLabelText"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/profilePage_description"
            app:layout_constraintTop_toBottomOf="@+id/profilePage_registeredLabel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trophiesView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trophiesLabel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>